--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-hacker
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: About me Tales Casagrande a.ka. Taleco
+description: [A guy with passion for cyber security!]
+description: [Here you find my social links, blog posts, pics and random thinks]
+
