--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
 
-title: About me Tales Casagrande a.ka. Taleco
-description: [A guy with passion for cyber security!]
-description: [Here you find my social links, blog posts, pics and random thinks]
+title: Tales Casagrande a.ka. Taleco
+  description: A guy with passion for cyber security!
+  description: Here you find my social links, blog posts, pics and random thinks
 
