--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-hacker
 
-title: Tales Casagrande a.ka. Taleco
-  description: [A guy with passion for cyber security!]
+title: [Tales Casagrande a.ka Taleco]
+description: [A guy with passion for cyber security!]
