--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-hacker
 
 title: [Tales Casagrande a.ka Taleco]
 description: [A guy with passion for cyber security!]
+description: [Here you find a little bit more about me]
+
